--- a/localisation/SPR_focus_l_english.yml
+++ b/localisation/SPR_focus_l_english.yml
@@ -59,8 +59,8 @@
  SPR_develop_madrid_desc:0 "We will invest our resources in the developement of Madrid."
  SPR_develop_cata:0 "Develop Cataluña"
  SPR_develop_cata_desc:0 "We will invest our resources in the developement of Cataluña."
- SPR_develop_granada:0 "Develop Granada"
- SPR_develop_granada_desc:0 "We will invest our resources in the developement of Granada."
+ SPR_develop_galicia:0 "Develop Galicia"
+ SPR_develop_galicia_desc:0 "We will invest our resources in the developement of Galicia."
  SPR_develop_andalusia:0 "Develop Andalusía"
  SPR_develop_andalusia_desc:0 "We will invest our resources in the developement of Andalusía."
  SPR_embrace_modernity:0 "Embrace Modernity"
