--- a/localisation/PRU_focus_l_english.yml
+++ b/localisation/PRU_focus_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- PRU_recruit_new_officers:0 "Recruit New Officers"
+ PRU_recruit_new_officers:0 "Recruit New Officers" #Changed now?
  PRU_recruit_new_officers_desc:0 "Our military stuff has roughly changed since the previous wars. Experienced generals need to be compensated with young and innovative officers."
  PRU_reform_bureocracy:0 "Reform Bureocracy"
  PRU_reform_bureocracy_desc:0 "The training and logistics of our army are being interrupted by a large and inneficient bureocracy that needs to be simplified."
