--- a/localisation/PRU_ideas_l_english.yml
+++ b/localisation/PRU_ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- pru_victors_from_7yw:0 "Victors from the 7 Years War"
+ pru_victors_from_7yw:0 "Victors from the 7 Years War" #Changed now?
  pru_german_efficiency:0 "German Efficiency"
  pru_old_officers:0 "Old Officers"
  pru_inneficient_bureocracy:0 "Inneficient Bureocracy"
