--- a/localisation/FRA_focus_l_english.yml
+++ b/localisation/FRA_focus_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  
  FRA_experience_from_italy:0 "Experience From Italy"
  FRA_experience_from_italy_desc:0 "Our campaign in the Italian Peninsula was a success, but we must use that experience to improve our strategies."
@@ -92,3 +92,110 @@
  FRA_raise_wages_desc:0 "Raising the wages of the poor workers will make them more loyal to our cause, however, it has a price."
  FRA_give_land:0 "Distribute Land"
  FRA_give_land_desc:0 "By distributing the land of the church and the aristocracy between the peasants, we will gain their loyalty and reduce the power of our enemies."
+ 
+ 
+ FRA_towards_second_republic:0 "Towards The Second Republic"
+ FRA_towards_second_republic_desc:0 "The First Republic was weak and could just work under the terror. We need a new and stronger Republic, but who will be the leader?"
+ FRA_constitutional_monarchy:0 "Constitutional Monarchy"
+ FRA_constitutional_monarchy_desc:0 "After the crisis of the Reign Of Terror, we need a royal family to restore the order and stability. But, as the British, the powers of the King will be limitated by a constitution."
+ FRA_bonapartist_party:0 "A Bonapartist Party"
+ FRA_bonapartist_party_desc:0 "The popularity of the Consul Napoleon Bonaparte wil surely grant him a majority in the congress once democracy is restored."
+ FRA_call_for_elections:0 "Call For Elections"
+ FRA_call_for_elections_desc:0 "The First Republic did not ask for the popular vote and therefore was not really democratic. We must call for free elections in the whole country."
+ FRA_technologic_advances:0 "Technologic Advances"
+ FRA_technologic_advances_desc:0 "In such a prosperous era we are living, the technologic advances and scientific achievements happen daily."
+ FRA_free_trade:0 "Free Trade"
+ FRA_free_trade_desc:0 "Now that we are at peace, we exoand our trade with the next of the world."
+ FRA_scientific_exchange:0 "Scientific Exchange"
+ FRA_scientific_exchange_desc:0 "Now that we are at peace, we can integrate our country in the international scientiffic comunity."
+ 
+ FRA_return_to_monarchism:0 "Return To Monarchism"
+ FRA_return_to_monarchism_desc:0 "The First Republic was weak and could not manage the situation of the war. France needs a strong leader to rule her."
+ FRA_bonapartist_dinasty:0 "A Bonapartist Dynasty"
+ FRA_bonapartist_dinasty_desc:0 "Napoleon Bonaparte is the most popular man in the army and the political scenario. He has the right to proclaim himself as the new monarch of the country, although this may trigger some opossition from the workers, the church or the bourgeoisie."
+ FRA_french_imperialism:0 "French Imperialism"
+ FRA_french_imperialism_desc:0 "France has a high prestige because of her military. We must expand our frontiers in Europe."
+ FRA_restore_french_glory:0 "Restore The Glory Of France"
+ FRA_restore_french_glory_desc:0 "France is quite big and glorious at the moment, but it was and can be even greater!"
+ FRA_carolingian_empire:0 "Restore The Carolingian Empire"
+ FRA_carolingian_empire_desc:0 "The Empire of Charlemagne was probably the golden age for the French. We must reconstruct that Empire by taking what is rightfully ours in the HRE."
+ FRA_unificate_italy:0 "Unificate Italy"
+ FRA_unificate_italy_desc:0 "Napoleon has been named King of Italy in Milan, but there are some states in the peninsula that we don't rule. We shall unify Italy under one puppet state."
+ FRA_tenth_cruzade:0 "The Tenth Cruzade"
+ FRA_tenth_cruzade_desc:0 "Now that we rule the capital of the Catholic faith, we are now the deffenders of it. We must start a Crusade against the Ottoman Empire and retake the Holy Land."
+ FRA_succesor_of_rome:0 "The Successor Of Rome"
+ FRA_succesor_of_rome_desc:0 "The French Empire has now fullfilled several conquests and is the most likely successor of Rome. It is our duty to bring back the glory of the Roman Empire!"
+ FRA_conquer_britannia:0 "Conquer Britania"
+ FRA_conquer_britannia_desc:0 "In order to restore the Roman Empire, we must conquer Britania, at the north."
+ FRA_conquer_hispania:0 "Conquer Hispania"
+ FRA_conquer_hispania_desc:0 "In order to restore the Roman Empire, we must conquer Hispania, at the west."
+ 
+ FRA_bourbon_restoration:0 "The Bourbon Restoration"
+ FRA_bourbon_restoration_desc:0 "We will bring back to the throne the legitimate heir of France."
+ FRA_befriend_the_kings:0 "Befriend The Kings"
+ FRA_befriend_the_kings_desc:0 "Now that the Monarchy has been restored, we must try to improve our relations with the other Kings of Europe."
+ FRA_reborn_old_unions:0 "Reborn Old Unions"
+ FRA_reborn_old_unions_desc:0 "An interesting characteristic of monarchy, is that we can easily unite with other nations just by uniting our families."
+ FRA_angelin_empire:0 "The Angevin Empire"
+ FRA_angelin_empire_desc:0 "Long time ago, our family and the British one were united. We can try to recreate that union and unite our nations."
+ FRA_union_with_the_normans:0 "Union With The Normans"
+ FRA_union_with_the_normans_desc:0 "The Duchy of Normandy was one of the most important of France. We can offer the nordics to recover that land in exchange for their loyalty."
+ FRA_reconquer_colonies:0 "Reconquer Our Colonies"
+ FRA_reconquer_colonies_desc:0 "In order to be a superpower, we need to reinforce our colonial empire."
+ FRA_reconquer_haiti:0 "Reconquer Haiti"
+ FRA_reconquer_haiti_desc:0 "The anti-slavery movement in Haiti inspired many revolts in all the world. We must crush the revolution to preserve our privileges."
+ FRA_reconquer_quebec:0 "Reconquer Quebec"
+ FRA_reconquer_quebec_desc:0 "Quebec was lost during the Seven Years War, but most of their people speak French and will be pleased to come back to the Empire."
+ FRA_help_europeans:0 "Help Our European Allies"
+ FRA_help_europeans_desc:0 "To gain respect among the other european powers, we must help them with their own issues."
+ FRA_help_against_prussia:0 "Unite Against Prussia"
+ FRA_help_against_prussia_desc:0 "We have already have a war because of the rivalry between Prussia and Austria. We must help our old allies to reunite the HRE."
+ FRA_push_back_ottomans:0 "Push Back The Ottomans"
+ FRA_push_back_ottomans_desc:0 "Now that the Ottomans are weak, we must expulse them from Europe and push them back to Asia."
+ FRA_crush_democracies:0 "Crush The Democracies"
+ FRA_crush_democracies_desc:0 "Democracy is an evil virus that goes against the order that has ruled the world since the first civilizations. They must dissapear!"
+ 
+ FRA_rebirth_of_revolution:0 "The Rebirth Of The Revolution"
+ FRA_rebirth_of_revolution_desc:0 "Napoleon Bonaparte is just another dictator, the Franch people must unite and bring back the fire of the revolution!"
+ FRA_french_socialism:0 "The Birth Of French Socialism"
+ FRA_french_socialism_desc:0 "The fall of the aristocracy and the rise of the bourgeoisie has inspired many French to oppose the ideology based in the private property."
+ FRA_socialist_intelectuals:0 "Socialist Intelectuals"
+ FRA_socialist_intelectuals_desc:0 "Socialism has inspired many artists, philosophers and even scientists. This new way to think is the future."
+ FRA_seize_churchs:0 "Seize The Church Riches"
+ FRA_seize_churchs_desc:0 "The Catholic Church is covered with gold while most of the cpuntry can't buy bread, we will seize their riches and use it for the revolution."
+ FRA_cult_of_reason:0 "Cult Of Reason"
+ FRA_cult_of_reason_desc:0 "Old religions based their belivings in irrational prophecies and traditions. We need a new religion that focus on the power of the human mind."
+ FRA_spread_the_revolution:0 "Spread The Revolution"}
+ FRA_spread_the_revolution_desc:0 "The Revolution isn't just for France, we must take her to the whole world!"
+ 
+ FRA_rev_americas:0 "Revolution In The Americas"
+ FRA_rev_americas_desc:0 "Before planning a worldwide revolution, we must concentrate in supporting the revolution in America."
+ FRA_rev_usa:0 "Ignite The Revolution In The USA"
+ FRA_rev_usa_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_new_spain:0 "Ignite The Revolution In New Spain"
+ FRA_rev_new_spain_desc:0 "The colonies of the Spanish Empire are now Ilustrated by the ideas of liberty and revolution, they must revolt against their tyrannic conquistators."
+ 
+ FRA_rev_east:0 "Revolution In The East"
+ FRA_rev_east_desc:0 "Before planning a worldwide revolution, we must concentrate in supporting the revolution in Asia."
+ FRA_rev_tur:0 "Ignite The Revolution In The Ottoman Empire"
+ FRA_rev_tur_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_chi:0 "Ignite The Revolution In China"
+ FRA_rev_chi_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ 
+ FRA_rev_europe:0 "Revolution In Europe"
+ FRA_rev_europe_desc:0 "Before planning a worldwide revolution, we must concentrate in supporting the revolution in Europe."
+ FRA_rev_eng:0 "Ignite The Revolution In The USA"
+ FRA_rev_eng_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_spr:0 "Ignite The Revolution In The USA"
+ FRA_rev_spr_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_aus:0 "Ignite The Revolution In The USA"
+ FRA_rev_aus_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_pru:0 "Ignite The Revolution In The USA"
+ FRA_rev_pru_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_swe:0 "Ignite The Revolution In The USA"
+ FRA_rev_swe_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_sov:0 "Ignite The Revolution In The USA"
+ FRA_rev_sov_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
+ FRA_rev_knows_no_borders:0 "The Revolution Knows No Borders"
+ FRA_rev_knows_no_borders_desc:0 "We have taken the revolution to Europe, now we must take it to the hole world!"
+ 
