--- a/localisation/SPR_focus_l_english.yml
+++ b/localisation/SPR_focus_l_english.yml
@@ -47,8 +47,8 @@
  SPR_catch_up_desc:0 "We are far behind the industrial capacity of Britain. We must hurry if we don't want to be left behind."
  SPR_roads_construction:0 "Roads Construction"
  SPR_roads_construction_desc:0 "Trade and transportation need a better infrastructure that the poor roads that unite our country."
- SPR_railway_networks:0 "Railway Networks"
- SPR_railway_networks_desc:0 "Building our first railway networks will help us to carry all the coal and steal needed for our factories."
+ SPR_railway_network:0 "Railway Networks"
+ SPR_railway_network_desc:0 "Building our first railway networks will help us to carry all the coal and steal needed for our factories."
  SPR_small_manu:0 "Small Manufacturies"
  SPR_small_manu:0 "Step by step, we will begin our industrialization with textiles and light industry."
  SPR_desregulate_enterprises:0 "Desregulate Enterprises"
