--- a/localisation/SOV_focus_l_english.yml
+++ b/localisation/SOV_focus_l_english.yml
@@ -4,8 +4,8 @@
  SOV_catch_up_desc:0 "We are far behind the industrial capacity of Britain. We must hurry if we don't want to be left behind."
  SOV_roads_construction:0 "Roads Construction"
  SOV_roads_construction_desc:0 "Trade and transportation need a better infrastructure that the poor roads that unite our country."
- SOV_railway_networks:0 "Railway Networks"
- SOV_railway_networks_desc:0 "Building our first railway networks will help us to carry all the coal and steal needed for our factories."
+ SOV_railway_network:0 "Railway Networks"
+ SOV_railway_network_desc:0 "Building our first railway networks will help us to carry all the coal and steal needed for our factories."
  SOV_small_manu:0 "Small Manufacturies"
  SOV_small_manu:0 "Step by step, we will begin our industrialization with textiles and light industry."
  SOV_desregulate_enterprises:0 "Desregulate Enterprises"
