--- a/localisation/SPR_ideas_l_english.yml
+++ b/localisation/SPR_ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 spr_declining_empire:0 "Declining Empire"}
-spr_declining_empire_desc:0 "We were once a world superpower, but that days have been let in the past. Internal conflicts and wars have weakened us, and we fear been conquered by the French. Is it even possible to bring back the good old days?"
+spr_declining_empire_desc:0 "We were once a world superpower, but that days have been let in the past. Internal conflicts and wars have weakened us, and we fear been invaded by our neighbours. Is it even possible to bring back the good old days?"
 spr_manuel_godoy:0 "Manuel Godoy"
 spr_manuel_godoy_desc:0 "Manuel Godoy is a clever statesman with growing influence in our politics and administration. Some think that he is even more powerful than the King himself."
 spr_ferdinand_claim:0 "Ferdinand VII Claims"
