I am not sure why french localistion bugged, but now it works

--- a/localisation/FRA_focus_l_english.yml
+++ b/localisation/FRA_focus_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  
  FRA_experience_from_italy:0 "Experience From Italy"
  FRA_experience_from_italy_desc:0 "Our campaign in the Italian Peninsula was a success, but we must use that experience to improve our strategies."
