--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ whig:0 "Whig"
+ tory:0 "Tory"
+ mad_king:0 "Mad King"
  living_divinity:0 "Living Divinity"
  cc_leader:0 "General"
  fm_leader:0 "Field Marshal"
